<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_vr_ros</name>
  <version>0.0.1</version>
  <description>The open_vr_ros package</description>
  <author>Vitor Matos</author>
  <author email="vmatos@robosavvy.com">Vitor Matos</author>
  
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/vive_ros</url>
  <url type="repository">https://github.com/robosavvy/vive_ros</url>
  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rclcpp</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
